The ledger learns who is calling, and stays exactly as dark as it was
Permissive SSO identity in the ledger HTTP layer, per the rollout directive:
validate a token if one arrives, attach the identity, never 401. The public
demo has no accounts and every route answers byte-identically without one.

SsoIdentity mirrors dev.minibank.broker.CallerIdentity rather than inventing
a second abstraction, and like it does NOT import dev.b4rruf3t.sso.client ·
that package is unresolvable in this build, and a dark launch that cannot be
built is not a launch. BankAuth plugs in through the documented adapter when
the reactor exists.

Identity is attached in the handle() funnel, after the rate-limit
short-circuit and inside try/finally { CALLER.remove() }. The executor is
newVirtualThreadPerTaskExecutor, so a ThreadLocal left set would leak an
identity into whatever request reused the carrier · a cross-customer data
leak. The finally wraps the only h.run() call.

V5__sso_customers.sql maps sso_sub to customer_id, both sides UNIQUE.
Directory.customerForSso returns null rather than throwing for an unlinked
subject: unlike owner() and load(), being handed a subject nobody linked is
the ORDINARY case during a rollout, and it must be indistinguishable from
every other anonymous outcome. A service that answers differently for "no
token" and "a token I don't recognise" is an oracle for enumerating who
holds an account.

The precedence rule is the broker's, unchanged: an identified caller's
customer wins over any id in the query string or body.

WHAT THE ADVERSARIAL REVIEW CHANGED

Three verifiers ran against this. One returned NOT APPROVED, and it was
right to:

- attach() caught RuntimeException. The adapter it exists for is a lambda
  over a jar that is not on the classpath yet, so its first activation-day
  failure is NoClassDefFoundError · an Error, which escaped both attach()
  and handle() and killed the response outright: no 500, no body, no metric.
  Now catches Throwable.

- Dir